Add docs and explanations for policy gradient and cart-pole problem

--- a/16_reinforcement_learning.ipynb
+++ b/16_reinforcement_learning.ipynb
@@ -8581,17 +8581,43 @@
    "outputs": [],
    "source": [
     "def discount_rewards(rewards, discount_rate):\n",
+    "    \"\"\"\n",
+    "    If an agent decides to go right three times in a row and \n",
+    "    gets + 10 reward after the first step, \n",
+    "    0 after the second step, and finally –50 after the third step, \n",
+    "    then assuming we use a discount factor γ = 0.8, \n",
+    "    the first action will have a total score of \n",
+    "    10 + γ × 0 + γ2 × (– 50) = –22.\n",
+    "    Args:\n",
+    "        rewards: List of rewards\n",
+    "        discount_rate: An integer which lies between 0 and 1\n",
+    "    Returns:\n",
+    "        A numpy.array containing the discounted rewards\n",
+    "    \"\"\"\n",
+    "    # Create a numpy.array of zeros with length=number of rewards\n",
     "    discounted_rewards = np.zeros(len(rewards))\n",
     "    cumulative_rewards = 0\n",
+    "    # We go from the last item towards the first item\n",
     "    for step in reversed(range(len(rewards))):\n",
     "        cumulative_rewards = rewards[step] + cumulative_rewards * discount_rate\n",
     "        discounted_rewards[step] = cumulative_rewards\n",
     "    return discounted_rewards\n",
     "\n",
     "def discount_and_normalize_rewards(all_rewards, discount_rate):\n",
+    "    \"\"\"\n",
+    "    Args:\n",
+    "        all_rewards: A list of list of rewards\n",
+    "        discount_rate: An integer which lies in the range of  (0, 1)\n",
+    "    Returns:\n",
+    "        A list of numpy.arrays of normalized rewards\n",
+    "    \"\"\"\n",
     "    all_discounted_rewards = [discount_rewards(rewards, discount_rate) for rewards in all_rewards]\n",
-    "    flat_rewards = np.concatenate(all_discounted_rewards)\n",
+    "    flat_rewards = np.concatenate(all_discounted_rewards, axis=0)\n",
+    "    \n",
+    "    # Get mean of all rewards\n",
     "    reward_mean = flat_rewards.mean()\n",
+    "    \n",
+    "    # Get standard deviation of all rewards\n",
     "    reward_std = flat_rewards.std()\n",
     "    return [(discounted_rewards - reward_mean)/reward_std for discounted_rewards in all_discounted_rewards]"
    ]
@@ -8634,7 +8660,17 @@
     }
    ],
    "source": [
-    "discount_and_normalize_rewards([[10, 0, -50], [10, 20]], discount_rate=0.8)"
+    "discount_and_normalize_rewards([[10, 0, -50], [10, 20]], discount_rate=0.8)\n",
+    "\n",
+    "#\n",
+    "# OUTPUT:\n",
+    "# [array([-0.28435071, -0.86597718, -1.18910299]),\n",
+    "#  array([ 1.26665318,  1.0727777 ])]\n",
+    "#\n",
+    "# Notice that the first episode was much worse than the second, \n",
+    "# so its normalized scores are all negative; \n",
+    "# all actions from the first episode would be considered bad, \n",
+    "# and conversely all actions from the second episode would be considered good\n"
    ]
   },
   {
@@ -8653,10 +8689,15 @@
    "source": [
     "env = gym.make(\"CartPole-v0\")\n",
     "\n",
+    "# Train the policy every 10 episodes\n",
     "n_games_per_update = 10\n",
+    "# Maximum steps per episode\n",
     "n_max_steps = 1000\n",
+    "# Number of training iterations\n",
     "n_iterations = 250\n",
+    "# Save the model every 10 training iterations\n",
     "save_iterations = 10\n",
+    "# The discount factor\n",
     "discount_rate = 0.95\n",
     "\n",
     "with tf.Session() as sess:\n",
@@ -8670,16 +8711,25 @@
     "            current_gradients = []\n",
     "            obs = env.reset()\n",
     "            for step in range(n_max_steps):\n",
-    "                action_val, gradients_val = sess.run([action, gradients], feed_dict={X: obs.reshape(1, n_inputs)})\n",
+    "                # Calculate the action and gradients for current observations\n",
+    "                action_val, gradients_val = sess.run([action, gradients], \n",
+    "                                                     feed_dict={X: obs.reshape(1, n_inputs)})\n",
+    "                # Run one step of the environment's dynamics for the resulting action\n",
     "                obs, reward, done, info = env.step(action_val[0][0])\n",
+    "                # Maintain the reward and gradients and continue\n",
     "                current_rewards.append(reward)\n",
     "                current_gradients.append(gradients_val)\n",
     "                if done:\n",
     "                    break\n",
+    "            # Once done, append the current_rewards list\n",
+    "            # and the current_gradients list to the \n",
+    "            # all_rewards and all_gradients lists respectively\n",
     "            all_rewards.append(current_rewards)\n",
     "            all_gradients.append(current_gradients)\n",
     "\n",
-    "        all_rewards = discount_and_normalize_rewards(all_rewards, discount_rate=discount_rate)\n",
+    "        # Apply discount factor and normalize the rewards for each game\n",
+    "        all_rewards = discount_and_normalize_rewards(all_rewards=all_rewards, \n",
+    "                                                     discount_rate=discount_rate)\n",
     "        feed_dict = {}\n",
     "        for var_index, gradient_placeholder in enumerate(gradient_placeholders):\n",
     "            mean_gradients = np.mean([reward * all_gradients[game_index][step][var_index]\n",
@@ -8688,6 +8738,7 @@
     "            feed_dict[gradient_placeholder] = mean_gradients\n",
     "        sess.run(training_op, feed_dict=feed_dict)\n",
     "        if iteration % save_iterations == 0:\n",
+    "            # Save the model every 10th iteration\n",
     "            saver.save(sess, \"./my_policy_net_pg.ckpt\")"
    ]
   },
