--- a/16_reinforcement_learning.ipynb
+++ b/16_reinforcement_learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Chapter 16 – Reinforcement Learning**"
+    "###### **Chapter 16 – Reinforcement Learning**"
    ]
   },
   {
