Add explanation for MDP

--- a/16_reinforcement_learning.ipynb
+++ b/16_reinforcement_learning.ipynb
@@ -9661,8 +9661,12 @@
     }
    ],
    "source": [
+    "# 3 states: s0, s1, s2\n",
+    "# 3 possible actions: a0, a1, a2\n",
+    "\n",
     "transition_probabilities = [\n",
-    "        [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], # in s0, if action a0 then proba 0.7 to state s0 and 0.3 to state s1, etc.\n",
+    "        # in s0, if action a0 then proba 0.7 to state s0 and 0.3 to state s1, etc.\n",
+    "        [[0.7, 0.3, 0.0], [1.0, 0.0, 0.0], [0.8, 0.2, 0.0]], \n",
     "        [[0.0, 1.0, 0.0], None, [0.0, 0.0, 1.0]],\n",
     "        [None, [0.8, 0.1, 0.1], None],\n",
     "    ]\n",
@@ -9686,23 +9690,51 @@
     "\n",
     "class MDPEnvironment(object):\n",
     "    def __init__(self, start_state=0):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            start_state: Initial state. Defaults to 0\n",
+    "        \"\"\"\n",
     "        self.start_state=start_state\n",
+    "        # Reset the defaults\n",
     "        self.reset()\n",
     "    def reset(self):\n",
+    "        \"\"\"\n",
+    "        Resets total_rewards to 0 and\n",
+    "        state to start_state (which defaults\n",
+    "        to 0 if no value is passed)\n",
+    "        \"\"\"\n",
     "        self.total_rewards = 0\n",
     "        self.state = self.start_state\n",
     "    def step(self, action):\n",
-    "        next_state = np.random.choice(range(3), p=transition_probabilities[self.state][action])\n",
+    "        \"\"\"\n",
+    "        Gets the next state and reward based on the previous state and\n",
+    "        chosen action. Update the state and cumulative reward\n",
+    "        Returns:\n",
+    "            Next state and reward\n",
+    "        \"\"\"\n",
+    "        next_state = np.random.choice(range(3), \n",
+    "                                      size=None, # A single value is returned\n",
+    "                                      p=transition_probabilities[self.state][action])\n",
     "        reward = rewards[self.state][action][next_state]\n",
     "        self.state = next_state\n",
     "        self.total_rewards += reward\n",
     "        return self.state, reward\n",
     "\n",
     "def run_episode(policy, n_steps, start_state=0, display=True):\n",
+    "    \"\"\"\n",
+    "    Run one episode for n_steps\n",
+    "    Args:\n",
+    "        policy: Policy function name\n",
+    "        start_state: Initial state. Defaults to 0.\n",
+    "        display: Boolean indicating whether to display the values\n",
+    "    Returns:\n",
+    "        Total rewards after n_steps are done\n",
+    "    \"\"\"\n",
     "    env = MDPEnvironment()\n",
     "    if display:\n",
     "        print(\"States (+rewards):\", end=\" \")\n",
     "    for step in range(n_steps):\n",
+    "        # If display is True, display only for first 10 steps\n",
     "        if display:\n",
     "            if step == 10:\n",
     "                print(\"...\", end=\" \")\n",
@@ -9718,9 +9750,11 @@
     "    return env.total_rewards\n",
     "\n",
     "for policy in (policy_fire, policy_random, policy_safe):\n",
+    "    # Stores rewards for each step in each episode\n",
     "    all_totals = []\n",
     "    print(policy.__name__)\n",
     "    for episode in range(1000):\n",
+    "        # Display only for first fivr episodes\n",
     "        all_totals.append(run_episode(policy, n_steps=100, display=(episode<5)))\n",
     "    print(\"Summary: mean={:.1f}, std={:1f}, min={}, max={}\".format(np.mean(all_totals), np.std(all_totals), np.min(all_totals), np.max(all_totals)))\n",
     "    print()"
