--- a/06_decision_trees.ipynb
+++ b/06_decision_trees.ipynb
@@ -1009,6 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   },
   "nav_menu": {
    "height": "309px",
