--- a/05_support_vector_machines.ipynb
+++ b/05_support_vector_machines.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,19 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n",
+      "['setosa', 'versicolor', 'virginica']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "SVC(C=inf, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-       "  kernel='linear', max_iter=-1, probability=False, random_state=None,\n",
-       "  shrinking=True, tol=0.001, verbose=False)"
+       "SVC(C=inf, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='linear',\n",
+       "    max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "    tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +109,13 @@
     "from sklearn import datasets\n",
     "\n",
     "iris = datasets.load_iris()\n",
+    "\n",
     "X = iris[\"data\"][:, (2, 3)]  # petal length, petal width\n",
     "y = iris[\"target\"]\n",
+    "\n",
+    "print(y)\n",
+    "\n",
+    "print(list(iris.target_names))\n",
     "\n",
     "setosa_or_versicolor = (y == 0) | (y == 1)\n",
     "X = X[setosa_or_versicolor]\n",
@@ -2920,7 +2937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1"
   },
   "nav_menu": {},
   "toc": {
