--- a/tools_numpy.ipynb
+++ b/tools_numpy.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import division, print_function, unicode_literals"
@@ -32,10 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -3931,18 +3927,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 1,  2,  3],\n",
-       "       [ 5,  7, 11],\n",
-       "       [21, 29, 31]])"
-      ]
+      "text/plain": "array([[ 1,  2,  3],\n       [ 5,  7, 11],\n       [21, 29, 31]])"
      },
-     "execution_count": 141,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4250,19 +4242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[1, 0, 0, 0, 2],\n",
-       "       [0, 0, 3, 0, 0],\n",
-       "       [0, 0, 0, 0, 0],\n",
-       "       [0, 2, 0, 0, 0]])"
-      ]
+      "text/plain": "array([[1, 0, 0, 0, 2],\n       [0, 0, 3, 0, 0],\n       [0, 0, 0, 0, 0],\n       [0, 2, 0, 0, 0]])"
      },
-     "execution_count": 153,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4274,19 +4261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 0.,  1.,  0.,  0.],\n",
-       "       [ 1.,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., -1.],\n",
-       "       [ 0.,  0.,  1.,  0.]])"
-      ]
+      "text/plain": "array([[ 0.,  1.,  0.,  0.],\n       [ 1.,  0.,  0.,  0.],\n       [ 0.,  0.,  0., -1.],\n       [ 0.,  0.,  1.,  0.]])"
      },
-     "execution_count": 154,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4298,16 +4280,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([ 3.        ,  2.23606798,  2.        ,  0.        ])"
-      ]
+      "text/plain": "array([3.        , 2.23606798, 2.        , 0.        ])"
      },
-     "execution_count": 155,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4325,25 +4305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([[ 3.        ,  0.        ,  0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  2.23606798,  0.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  2.        ,  0.        ,  0.        ],\n",
-       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ]])"
-      ]
+      "text/plain": "array([[3.        , 0.        , 0.        , 0.        ],\n       [0.        , 2.23606798, 0.        , 0.        ],\n       [0.        , 0.        , 2.        , 0.        ],\n       [0.        , 0.        , 0.        , 0.        ]])"
      },
-     "execution_count": 156,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S = np.zeros((4, 5))\n",
+    "S = np.zeros((4, 4))\n",
     "S[np.diag_indices(4)] = S_diag\n",
     "S  # Σ"
    ]
@@ -5025,6 +5000,102 @@
     "# What next?\n",
     "Now you know all the fundamentals of NumPy, but there are many more options available. The best way to learn more is to experiment with NumPy, and go through the excellent [reference documentation](http://docs.scipy.org/doc/numpy/reference/index.html) to find more functions and features you may be interested in."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What next?\n",
+    "Now you know all the fundamentals of NumPy, but there are many more options available. The best way to learn more is to experiment with NumPy, and go through the excellent [reference documentation](http://docs.scipy.org/doc/numpy/reference/index.html) to find more functions and features you may be interested in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "False"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Returns True if two arrays are element-wise equal within a tolerance.\n",
+    "np.allclose([1e10, 1e-7], [1.00001e10, 1e-8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[100,   1,   2,   3],\n       [  4, 100,   6,   7],\n       [  8,   9, 100,  11],\n       [ 12,  13,  14, 100]])"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Return the indices to access the main diagonal of a n-dimensional array.\n",
+    "di = np.diag_indices(4)\n",
+    "a = np.arange(16).reshape(4, 4)\n",
+    "a[di] = 100\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -5043,7 +5114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.1-final"
   },
   "toc": {
    "toc_cell": false,
